// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > render 1`] = `
<div>
  <div>
    <section>
      <h2>
        Coffee
      </h2>
      <button>
        hide
      </button>
      <p>
        コーヒーは、コーヒー豆から抽出される飲み物であり、世界中で広く愛されています。豆を挽いてお湯で淹れることで、香り高く濃厚な味わいが楽しめます。
      </p>
    </section>
    <section>
      <h2>
        Tea
      </h2>
      <button>
        show
      </button>
    </section>
  </div>
</div>
`;

exports[`Accordion > render 2`] = `
<div>
  <div>
    <section>
      <h2>
        Coffee
      </h2>
      <button>
        show
      </button>
    </section>
    <section>
      <h2>
        Tea
      </h2>
      <button>
        hide
      </button>
      <p>
        紅茶は、茶葉から抽出される飲み物であり、世界中で人気があります。茶葉をお湯で浸し、適切な時間で淹れることで、豊かな風味とアロマが楽しめます。
      </p>
    </section>
  </div>
</div>
`;

exports[`Accordion > render 3`] = `
<div>
  <div>
    <section>
      <h2>
        Coffee
      </h2>
      <button>
        hide
      </button>
      <p>
        コーヒーは、コーヒー豆から抽出される飲み物であり、世界中で広く愛されています。豆を挽いてお湯で淹れることで、香り高く濃厚な味わいが楽しめます。
      </p>
    </section>
    <section>
      <h2>
        Tea
      </h2>
      <button>
        show
      </button>
    </section>
  </div>
</div>
`;
